--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/download/dist/*
-/download/node_modules/*
-/download/index.html
-/download/gulpfile.js
-/download/res/less/*
-/queryString.js
+/*/dist/*
+/*/node_modules/*
+/*/gulpfile.js
